list collection completed