@@ -1,74 +1,23 @@
+import java.util.*;
 public class LinkLists {
     public static void main(String[] args) {
-        LinkList list = new LinkList();
-        list.add(1);
+        LinkedList<Integer> list=new LinkedList<>();
         list.add(2);
-        list.add(3);
-        list.add(4);
-        list.add(5);
+        list.add(6);
+        list.add(7);
+          list.add(7);
+            list.add(7);
+              list.add(7);
+        list.add(9);
+        list.addFirst(678);
+        list.addLast(876);
         System.out.println(list);
-        System.out.println(list.size());
-        System.out.println(list.get(0));
-        System.out.println(list.get(1));
-        System.out.println(list.get(2));
-        System.out.println(list.get(3));
-        System.out.println(list.get(4));
+        System.out.println(list.lastIndexOf(7));
+        System.out.println(list.getFirst());
+        System.out.println(list.getLast());
+        System.out.println(list.peek());
+
+        System.out.println("polling" + list.poll()); //return first element and remove it 
+        System.out.println(list);
     }
-
-    static class LinkList {
-        private Node head;
-        private int size;
-
-        void add(int value) {
-            if (head == null) {
-                head = new Node(value);
-            } else {
-                Node current = head;
-                while (current.next != null) {
-                    current = current.next;
-                }
-                current.next = new Node(value);
-            }
-            size++;
-        }
-
-        int size() {
-            return size;
-        }
-
-        int get(int index) {
-            if (index < 0 || index >= size) {
-                throw new IndexOutOfBoundsException();
-            }
-            Node current = head;
-            for (int i = 0; i < index; i++) {
-                current = current.next;
-            }
-            return current.value;
-        }
-
-        @Override
-        public String toString() {
-            StringBuilder sb = new StringBuilder("[");
-            Node current = head;
-            while (current != null) {
-                sb.append(current.value);
-                if (current.next != null) {
-                    sb.append(", ");
-                }
-                current = current.next;
-            }
-            sb.append("]");
-            return sb.toString();
-        }
-
-        private static class Node {
-            int value;
-            Node next;
-
-            Node(int value) {
-                this.value = value;
-            }
-        }
     }
-}
